--- a/server/package.json
+++ b/server/package.json
@@ -24,12 +24,14 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
+    "node-cron": "^4.2.1",
     "zod": "^4.0.13"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.9.2",
+    "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.3",
     "dotenv": "^17.2.3",
     "jest": "^30.2.0",
